--- a/src/UI/New/PhotoGallery.module.css
+++ b/src/UI/New/PhotoGallery.module.css
@@ -3,8 +3,11 @@
     flex-wrap: wrap;
     justify-content: flex-start;
     align-content: center;
-     padding: 10px; 
-    gap: 11px
+    padding: 10px; 
+    padding-left: 20px;
+    
+    gap: 5px;
+  
   }
   
   .photoItem {
@@ -12,7 +15,7 @@
     margin-bottom: 20px;
     margin-right: 10px;  
     margin-left: 10px;
-
+    
   }
   
   .photoItem:last-child {
